# standalone-uploader

./: .gitignore  AGENTS.md  CHANGELOG.md  GETTING_STARTED.md  HMAC_IMPLEMENTATION.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.jumble/: project.toml
docs/: update.md
examples/: index.html
examples/django/: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
examples/django/aura_uploader/: __init__.py  client.py  django.py  exceptions.py  signer.py  views.py
examples/django/tests/: __init__.py  test_signer.py
examples/net/: .gitignore
examples/net/Aura.UploaderClient/: Aura.UploaderClient.csproj  Aura.UploaderClient.sln  AuraHmacSigner.cs  AuraUploaderClient.cs  Program.cs  README.md  TokenExchangeExample.cs
examples/net/Aura.UploaderClient.Tests/: Aura.UploaderClient.Tests.csproj  AuraHmacSignerTests.cs  AuraUploaderClientTests.cs  SignatureTestVectorTests.cs
src/: index.ts  styles.css
src/__tests__/hmac/: crypto.test.ts  signer.test.ts
src/api/: client.ts
src/core/: AuraloaderEngine.ts  dicom.ts
src/hmac/: crypto.ts  index.ts  signer.ts  types.ts
src/types/: index.ts
src/ui/: Renderer.ts  Store.ts
